--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>Snake Game</h1>
-    <canvas id="gameCanvas" width="400" height="400"></canvas><br>
-    <button onclick="initializeGame()">Restart</button>
+    <canvas id="canvasGame" width="400" height="400"></canvas><br>
+    <button onclick="initializeGame()">Play</button>
+    <button onclick="initializeGame()">Try Again</button>
 
     
 </body>
