--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <h1>Snake Game</h1>
     <canvas id="canvasGame" width="400" height="400"></canvas><br>
     <button onclick="initializeGame()">Play</button>
-    <button onclick="initializeGame()">Try Again</button>
+   
 
+    <div class="controls">
+        <button onclick="setDirection('UP')">↑</button>
+        <button onclick="setDirection('LEFT')">←</button>
+        <button onclick="setDirection('RIGHT')">→</button>
+        <button onclick="setDirection('DOWN')">↓</button>
+    </div>
+    <button onclick="initializeGame()">Try Again</button>
     
 </body>
 <script src="./script.js"></script>
